wire up SearchFragment